# cualibre

./: .gitignore  CLAUDE.md  CUA-LIBRE Studio.spec  MANUAL.md  README.md  pyproject.toml  run.py  start.sh
.claude/skills/speckit-analyze/: SKILL.md
.claude/skills/speckit-checklist/: SKILL.md
.claude/skills/speckit-clarify/: SKILL.md
.claude/skills/speckit-converge/: SKILL.md
.claude/skills/speckit-implement/: SKILL.md
.claude/skills/speckit-plan/: SKILL.md
.claude/skills/speckit-tasks/: SKILL.md
.claude/skills/speckit-taskstoissues/: SKILL.md
.github/workflows/: installers.yml
.specify/: feature.json  init-options.json  integration.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: app.py  data_nrc_es.json  demo.py  export.py  extraction.py  literature.py  manual.py  models.py  nlp.py  sentiment.py  storage.py
backend/tests/: conftest.py  test_api.py  test_custom_domains.py  test_export.py  test_extraction.py  test_kwic.py  test_merge_and_zip.py  test_music.py  test_nlp.py  test_relations.py  test_sentiment.py  test_snapshots.py  test_storage.py
frontend/: index.html
frontend/css/: brutal.css
frontend/js/: api.js  canvas.js  charts.js  musica.js  nube.js  paleta.js  relations.js  reporte.js  sesion.js  state.js  views.js  wordcloud.js
packaging/: build_mac.sh  cualibre.icns
packaging/windows/: build_windows.bat  cualibre.iss
specs/001-cualibre-studio/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cualibre-studio/checklists/: pentagrama.md  requirements.md
specs/001-cualibre-studio/contracts/: api.md
