[project]
name = "cualibre"
version = "1.0.0"
description = "CUA-LIBRE STUDIO — Estudio de análisis cualitativo (QDA/CAQCAS) local"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
